Server: Get Account Info By Token API
