# server/src/controllers/account.ts
@@ -2,8 +2,23 @@ import { Router, Request, Response, NextFunction } from 'express'
 
 import { accountValidator } from '../validators'
 import { AccountService } from '../services'
+import { authenticateMiddleware } from '../middlewares'
+import { CustomRequest } from '../common'
 
 const accountController: Router = Router()
+
+accountController.post('/info', authenticateMiddleware, async (req: Request, res: Response, next: NextFunction) => {
+  try {
+    const { email } = (req as CustomRequest).user
+
+    res.json({
+      message: 'Get Info Successfully',
+      data: await AccountService.getInstance().getUserByEmail(email)
+    })
+  } catch (error) {
+    next(error)
+  }
+})
 
 accountController.post('/registry', accountValidator, async (req: Request, res: Response, next: NextFunction) => {
   try {
